Add two img for bacground and jumbotron, change font color to white

--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
         </div>
         <div class="row">
           <div class="col-md-4 pizzaSize">
-            <h3>Select Size:</h3>
+            <h3>Select Size Prices are 10,14,17:</h3>
             <input type="radio" name="pizzaSize" value="8">Small<br>
             <input type="radio" name="pizzaSize" value="12">Medium<br>
             <input type="radio" name="pizzaSize" value="15">Large<br>
           </div>
           <div class="col-md-4 pizzaProtein">
-            <h3>Select Protein:</h3>
+            <h3>Select Protein for a extra $1:</h3>
             <input type="checkbox" name="protein" value="Chicken">Chicken<br>
             <input type="checkbox" name="protein" value="Sausage">Sausage<br>
             <input type="checkbox" name="protein" value="Pepperoni">Pepperoni<br>
             <input type="checkbox" name="protein" value="Ham">Ham
           </div>
           <div class="col-md-4 pizzaToppings">
-            <h3>Select Topping:</h3>
+            <h3>Select Topping for a extra $1:</h3>
             <input type="checkbox" name="toppings" value="Pineapple">Pineapple<br>
             <input type="checkbox" name="toppings" value="Spinach">Spinach<br>
             <input type="checkbox" name="toppings" value="Olives">Olives<br>
